// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for createHistoricalWeeklyGoalsTable Should render only headers 1`] = `
<div
  class="tile"
>
  <div
    class="historical-weekly-goals-table tile-container"
  >
    <p
      class="tile-title"
    >
      Historical weekly goals
    </p>
    <table
      class="table-style"
    >
      <tr>
        <th>
          DATE
        </th>
        <th>
          WEEKLY GOAL
        </th>
        <th>
          START WEIGHT
        </th>
        <th>
          END WEIGHT
        </th>
        <th>
          ACHIEVED
        </th>
      </tr>
    </table>
  </div>
</div>
`;

exports[`Tests for createHistoricalWeeklyGoalsTable Should render table with rows 1`] = `
<div
  class="tile"
>
  <div
    class="historical-weekly-goals-table tile-container"
  >
    <p
      class="tile-title"
    >
      Historical weekly goals
    </p>
    <table
      class="table-style"
    >
      <tr>
        <th>
          DATE
        </th>
        <th>
          WEEKLY GOAL
        </th>
        <th>
          START WEIGHT
        </th>
        <th>
          END WEIGHT
        </th>
        <th>
          ACHIEVED
        </th>
      </tr>
      <tr>
        <td>
          17/12/1995
        </td>
        <td>
          Gain
        </td>
        <td>
          70
        </td>
        <td>
          80
        </td>
        <td>
          Yes
        </td>
      </tr>
      <tr>
        <td>
          18/01/1995
        </td>
        <td>
          Lose
        </td>
        <td>
          60
        </td>
        <td>
          61
        </td>
        <td>
          No
        </td>
      </tr>
    </table>
  </div>
</div>
`;
